# bh

./: Cargo.toml  LICENSE  README.md  docs.md
.github/workflows/: ci.yaml  release.yaml
docs/: CLI.md
src/: cli.rs  client.rs  lib.rs  main.rs  validation.rs
