[package]
name = "bh"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>"]
description = "BountyHub CLI"
repository = "https://github.com/bountyhub-org/bh"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] }
error-stack = "^0.5"
ureq = { version = "^2", features = ["json", "native-certs"] }
serde = { version = "^1", features = ["derive"] }
clap_complete = { version = "^4" }

[dev-dependencies]
ulid = "^1"
mockall = "^0.13"
