[package]
name = "bh"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>"]
description = "BountyHub CLI"
repository = "https://github.com/bountyhub-org/bh"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive", "env"] }
error-stack = "^0.6"
ureq = { version = "^3", features = ["json", "rustls", "platform-verifier"] }
serde = { version = "^1", features = ["derive"] }
clap_complete = { version = "^4" }
uuid = "^1"
serde_json = "^1"
percent-encoding = "2.3.1"

[dev-dependencies]
uuid = { version = "^1", features = ["v7"] }
mockall = "^0.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
